add the rpd-wallpaper to the relationship fields
The revpi-wallpaper just substitudes one of the image in rpd-wallpaper.

With Provides, all packages in relationship will be removed before
this package installed, which makes user less choices of the wallpaper.

With Breaks, it causes failure if the rpd-wallpaper is installed after
this package.

Signed-off-by: Zhi Han <z.han@kunbus.com>

--- a/debian/control
+++ b/debian/control
@@ -9,9 +9,7 @@ Homepage: https://revolution.kunbus.com/
 Package: revpi-wallpaper
 Architecture: all
 Depends: ${misc:Depends}
-Provides: pixel-wallpaper
-Replaces: pixel-wallpaper
-Breaks: pixel-wallpaper
+Replaces: pixel-wallpaper, rpd-wallpaper
 Description: Revolution Pi Wallpaper
  Lightweight package to replace the 30 MByte collection of wallpapers
  provided by the pixel-wallpaper package.  Revolution Pi is a set of
