--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@ Source: revpi-wallpaper
 Section: contrib/electronics
 Priority: optional
 Rules-Requires-Root: no
-Build-Depends: debhelper-compat (= 12)
-Standards-Version: 4.3.0
+Build-Depends: debhelper-compat (= 13)
+Standards-Version: 4.5.1
 Maintainer: KUNBUS GmbH <support@kunbus.com>
 Homepage: https://revolutionpi.com/
 Vcs-Browser: https://github.com/RevolutionPi/revpi-wallpaper
-Vcs-Git: https://github.com/RevolutionPi/revpi-wallpaper.git
+Vcs-Git: https://github.com/RevolutionPi/revpi-wallpaper.git -b raspios/bullseye
 
 Package: revpi-wallpaper
 Architecture: all
