feat: add a link to distribution's default wallpaper
In the .links file, a symbolic link from the Revolution Pi Wallpaper is
placed on the standard wallperpername of the Raspberry Pi bullseye
distribution. This sets our background in the GUI. Since this package
replaces 'rpd-wallpaper', there is no name conflict.

See: debian/README.Debian
Signed-off-by: Sven Sager <s.sager@kunbus.com>

--- a/debian/rules
+++ b/debian/rules
@@ -2,3 +2,7 @@
 
 %:
 	dh $@
+
+override_dh_link:
+	dh_link
+	dh_link '/usr/share/rpd-wallpaper/Revolution Pi.jpg' '/usr/share/rpd-wallpaper/clouds.jpg'
