packaging: Fix deprecated values in control file
- The section does not support a sub-section. We replace it with just
  electronics.

Signed-off-by: Sven Sager <s.sager@kunbus.com>

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: revpi-wallpaper
-Section: contrib/electronics
+Section: electronics
 Priority: optional
 Maintainer: KUNBUS GmbH <support@kunbus.com>
 Rules-Requires-Root: no
