packaging: Update debian files for debian bookworm
Signed-off-by: Sven Sager <s.sager@kunbus.com>

--- a/debian/control
+++ b/debian/control
@@ -4,10 +4,10 @@ Priority: optional
 Maintainer: KUNBUS GmbH <support@kunbus.com>
 Rules-Requires-Root: no
 Homepage: https://revolutionpi.com/
-Vcs-Browser: https://github.com/RevolutionPi/revpi-wallpaper
-Vcs-Git: https://github.com/RevolutionPi/revpi-wallpaper.git -b raspios/bullseye
+Vcs-Browser: https://gitlab.com/revolutionpi/revpi-wallpaper
+Vcs-Git: https://gitlab.com/revolutionpi/revpi-wallpaper.git -b raspios/bookworm
 Build-Depends: debhelper-compat (= 13)
-Standards-Version: 4.5.1
+Standards-Version: 4.6.2
 
 Package: revpi-wallpaper
 Architecture: all
