--- a/debian/rules
+++ b/debian/rules
@@ -5,4 +5,4 @@
 
 override_dh_link:
 	dh_link
-	dh_link '/usr/share/rpd-wallpaper/Revolution Pi.jpg' '/usr/share/rpd-wallpaper/RPiSystem.png'
+	dh_link '/usr/share/rpd-wallpaper/Revolution Pi.jpg' '/usr/share/rpd-wallpaper/clouds.jpg'
